# POO-Cinema

./: .gitignore  Cinema.cpp  Cinema.slnx  Cinema.vcxproj  Cinematograf.cpp  Client.h  Film.h  Makefile  PASI_DE_BUILD.md  Persoana.h  README.md  Rezervare.cpp  Sala.cpp  SalaVIP.h  TipPersoana.cpp  TipPersoana.h  cinema  cinema_build  cinema_web  cinema_web_new  test_cinema_build
Cinema/: AppContext.cpp  Cinema.cpp  Cinema.vcxproj  Cinema.vcxproj.filters  Cinematograf.h  Client.cpp  Client.h  DialogAngajat.h  DialogFilm.h  DialogRezervare.h  DialogSala.h  DialogSpectacol.h  Exceptii.h  Film.cpp  Film.h  LoginForm.h  MainApp.cpp  MainForm.h  Persistenta.cpp  Persistenta.h  Persoana.cpp  Persoana.h  Raport.h  Repository.h  Rezervare.cpp  Rezervare.h  Sala.cpp  Sala.h  SalaVIP.cpp  SalaVIP.h  TipPersoana.cpp  TipPersoana.h  main.cpp
Cinema/date/: angajati.txt  filme.txt  rezervari.txt  sali.txt  spectacole.txt
cinema-poo/: Angajat.cpp  AppContext.h  CMakeLists.txt  Cinematograf.cpp  Cinematograf.h  Film.cpp  Film.h  Makefile  Repository.h  Rezervare.cpp  Rezervare.h  RezervareOnline.cpp  RezervareOnline.h  Spectacol.cpp  UIConsola.h  cinema_web  main_consola.cpp
cinema-poo/docs/: documentatie.md
cinema-poo/src/: Angajat.h  ICinemaService.h  Persoana.h  Raport.cpp  Rezervare.h  RezervareOnline.h  Sala.cpp  Sala.h  SalaVIP.cpp  SalaVIP.h  SistemAutentificare.cpp  SistemAutentificare.h  Spectacol.h  TipAngajat.cpp  TipAngajat.h  main_consola_fixed.cpp  main_web.cpp
cinema-poo/tests/: test_cinema.cpp
cinema-poo/web/: data.js  index.html
